[gd_scene format=3 uid="uid://bnouxp2eet8ue"]

[ext_resource type="Script" uid="uid://bw8ppmlq25nur" path="res://scene/rhythm/rhythm_main.gd" id="1_14pkl"]
[ext_resource type="Texture2D" uid="uid://b5yiwlp1xopb8" path="res://asset/Interaktif_Ritme/Game_Ritme/Background.png" id="2_umwlo"]
[ext_resource type="Script" uid="uid://bqacwwtphvuta" path="res://scene/rhythm/hit_zone.gd" id="3_6d6ls"]
[ext_resource type="Script" uid="uid://dlvahj7in2kbn" path="res://scene/rhythm/lane.gd" id="3_77sps"]
[ext_resource type="Texture2D" uid="uid://dtjjtnowhtddn" path="res://asset/Interaktif_Ritme/Game_Ritme/Asset.png" id="3_a5nef"]
[ext_resource type="Texture2D" uid="uid://c0l4ep3eo04c" path="res://asset/Interaktif_Ritme/Game_Ritme/Karakter_Diam.png" id="3_j1kn8"]
[ext_resource type="Texture2D" uid="uid://cai7i0ungvkbr" path="res://asset/Interaktif_Ritme/Game_Ritme/Karakter_Menari.png" id="4_a1liy"]
[ext_resource type="PackedScene" uid="uid://j0joplidf0je" path="res://scene/rhythm/note/note.tscn" id="4_umwlo"]
[ext_resource type="Script" uid="uid://d135vwi28nk7b" path="res://scene/rhythm/spawner.gd" id="5_a5nef"]
[ext_resource type="AudioStream" uid="uid://b81mu04hbg81x" path="res://audio/batak_song.wav" id="10_a1liy"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a1liy"]
load_path = "res://.godot/imported/Asset.png-2ff58de9b6c389e57842734c404983a6.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_a1liy"]
atlas = SubResource("CompressedTexture2D_a1liy")
region = Rect2(408, 3722, 395, 358)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gk3e2"]
load_path = "res://.godot/imported/Asset.png-2ff58de9b6c389e57842734c404983a6.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_3ooos"]
atlas = SubResource("CompressedTexture2D_gk3e2")
region = Rect2(408, 3722, 395, 358)

[sub_resource type="AtlasTexture" id="AtlasTexture_knnt7"]
atlas = ExtResource("3_a5nef")
region = Rect2(408, 3722, 395, 358)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfic3"]
atlas = ExtResource("3_a5nef")
region = Rect2(408, 3722, 395, 358)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm7mp"]
atlas = ExtResource("3_a5nef")
region = Rect2(3040, 3716, 1127, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xr6n"]
atlas = ExtResource("3_a5nef")
region = Rect2(3753, 3173, 289, 261)

[sub_resource type="AtlasTexture" id="AtlasTexture_uumlj"]
atlas = ExtResource("3_a5nef")
region = Rect2(5729, 3084, 538, 1035)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiubi"]
atlas = ExtResource("3_a5nef")
region = Rect2(4912, 3122, 672, 959)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypok4"]
atlas = ExtResource("3_a5nef")
region = Rect2(4250, 3134, 496, 937)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk3e2"]
atlas = ExtResource("3_j1kn8")
region = Rect2(0, 0, 3899, 3306)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef84w"]
atlas = ExtResource("3_j1kn8")
region = Rect2(3899, 0, 3899, 3306)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x3wl"]
atlas = ExtResource("4_a1liy")
region = Rect2(0, 0, 2100, 3306)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5y2m"]
atlas = ExtResource("4_a1liy")
region = Rect2(2100, 0, 2100, 3306)

[sub_resource type="AtlasTexture" id="AtlasTexture_rouww"]
atlas = ExtResource("4_a1liy")
region = Rect2(4200, 0, 2100, 3306)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7upc"]
atlas = ExtResource("4_a1liy")
region = Rect2(6300, 0, 2100, 3306)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ooos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk3e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef84w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x3wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5y2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rouww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7upc")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6d6ls"]
radius = 63.126858

[node name="RhythmMain" type="Node2D" unique_id=2072620372]
position = Vector2(576, 325)
script = ExtResource("1_14pkl")

[node name="RhythmHUD" type="CanvasLayer" parent="." unique_id=781376975]

[node name="Heart" type="Control" parent="RhythmHUD" unique_id=128124451]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 325.0
offset_right = 616.0
offset_bottom = 365.0
metadata/_edit_use_anchors_ = true

[node name="Heart1" type="TextureRect" parent="RhythmHUD/Heart" unique_id=59414227]
layout_mode = 1
anchors_preset = -1
anchor_left = -14.025
anchor_top = -7.975
anchor_right = -14.025
anchor_bottom = -7.975
offset_top = 19.0
offset_right = 40.0
offset_bottom = 59.0
texture = SubResource("AtlasTexture_a1liy")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Heart2" type="TextureRect" parent="RhythmHUD/Heart" unique_id=213060999]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.45
anchor_top = -2.1
anchor_right = -3.45
anchor_bottom = -2.1
offset_left = -372.0
offset_top = -216.0
offset_right = -332.0
offset_bottom = -176.0
texture = SubResource("AtlasTexture_3ooos")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Heart3" type="TextureRect" parent="RhythmHUD/Heart" unique_id=1240214137]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.0
anchor_top = -2.8
anchor_right = 2.0
anchor_bottom = -2.8
offset_left = -540.0
offset_top = -188.0
offset_right = -500.0
offset_bottom = -148.0
texture = SubResource("AtlasTexture_knnt7")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Heart4" type="TextureRect" parent="RhythmHUD/Heart" unique_id=1735303266]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.45
anchor_top = -1.25
anchor_right = -4.45
anchor_bottom = -1.25
offset_left = -232.0
offset_top = -250.0
offset_right = -192.0
offset_bottom = -210.0
texture = SubResource("AtlasTexture_rfic3")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="TextureButton" parent="RhythmHUD" unique_id=1429829100]
offset_left = 520.0
offset_top = 495.99997
offset_right = 1647.0
offset_bottom = 868.0
scale = Vector2(0.1, 0.1)
texture_normal = SubResource("AtlasTexture_pm7mp")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="PauseButton" type="TextureButton" parent="RhythmHUD" unique_id=2112782384]
offset_left = 1093.0
offset_top = 10.0
offset_right = 1382.0
offset_bottom = 271.0
scale = Vector2(0.15, 0.15)
texture_normal = SubResource("AtlasTexture_8xr6n")
metadata/_edit_use_anchors_ = true

[node name="Countdown" type="Control" parent="RhythmHUD" unique_id=804455146]
layout_mode = 3
anchors_preset = 0
offset_left = 530.0
offset_top = 371.0
offset_right = 570.0
offset_bottom = 411.0
metadata/_edit_use_anchors_ = true

[node name="count3" type="TextureRect" parent="RhythmHUD/Countdown" unique_id=1813176865]
layout_mode = 1
anchors_preset = -1
anchor_left = -5.925
anchor_top = -1.45
anchor_right = -5.925
anchor_bottom = -1.45
offset_left = 237.0
offset_top = -42.0
offset_right = 775.0
offset_bottom = 993.0001
scale = Vector2(0.2, 0.2)
texture = SubResource("AtlasTexture_uumlj")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="count2" type="TextureRect" parent="RhythmHUD/Countdown" unique_id=1579705447]
layout_mode = 0
offset_top = -100.0
offset_right = 672.0
offset_bottom = 860.95996
scale = Vector2(0.2, 0.2)
texture = SubResource("AtlasTexture_xiubi")

[node name="count1" type="TextureRect" parent="RhythmHUD/Countdown" unique_id=495399861]
layout_mode = 0
offset_top = -100.0
offset_right = 496.0
offset_bottom = 837.0
scale = Vector2(0.2, 0.2)
texture = SubResource("AtlasTexture_ypok4")

[node name="CountdownTimer" type="Timer" parent="RhythmHUD" unique_id=1574241407]

[node name="Music" type="AudioStreamPlayer" parent="." unique_id=1065428549]
stream = ExtResource("10_a1liy")
volume_db = -19.925
autoplay = true
mix_target = 1

[node name="Camera2D" type="Camera2D" parent="." unique_id=1829940751]

[node name="Background" type="Sprite2D" parent="." unique_id=230392773]
position = Vector2(-4.000122, 1.499939)
scale = Vector2(0.1454818, 0.14507885)
texture = ExtResource("2_umwlo")

[node name="animatedCenter" type="AnimatedSprite2D" parent="." unique_id=180611651]
position = Vector2(0, 28.999998)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_3ooos")
autoplay = "default"
frame_progress = 0.9861699

[node name="Lane" type="Node2D" parent="." unique_id=1767338304]
script = ExtResource("3_77sps")

[node name="HitZone" type="Area2D" parent="Lane" unique_id=1763018014]
script = ExtResource("3_6d6ls")

[node name="Sprite2D" type="Sprite2D" parent="Lane/HitZone" unique_id=522683068]
position = Vector2(-432, 144)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_a5nef")
region_enabled = true
region_rect = Rect2(949, 3061, 1093, 1093)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lane/HitZone" unique_id=836847211]
position = Vector2(-432, 143)
shape = SubResource("CircleShape2D_6d6ls")

[node name="Notes" type="Node2D" parent="Lane" unique_id=1950265324]

[node name="Spawner" type="Node2D" parent="Lane" unique_id=895098048]
position = Vector2(0, 0.39)
script = ExtResource("5_a5nef")
note_scene = ExtResource("4_umwlo")

[node name="HitLine" type="Sprite2D" parent="Lane" unique_id=1172694385]
position = Vector2(-8.474983, 142.99998)
scale = Vector2(0.14586301, 0.1)
texture = ExtResource("3_a5nef")
region_enabled = true
region_rect = Rect2(0, 2454, 8001, 499)

[connection signal="pressed" from="RhythmHUD/StartButton" to="." method="_on_start_button_pressed"]
